full_error_cli.txt
warning: unused import: `ConfigDelta`
  --> crates/dirtydata-core/src/actions.rs:17:30
   |
17 | use crate::types::{StableId, ConfigDelta};
   |                              ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `dirtydata-core` (lib) generated 1 warning (run `cargo fix --lib -p dirtydata-core` to apply 1 suggestion)
warning: unnecessary parentheses around assigned value
  --> crates/dirtydata-host/src/lib.rs:68:20
   |
68 |         let size = (input.len() as u32);
   |                    ^                  ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
68 -         let size = (input.len() as u32);
68 +         let size = input.len() as u32 ;
   |

warning: variable does not need to be mutable
  --> crates/dirtydata-host/src/lib.rs:61:13
   |
61 | ...   let mut stdout = self.child.stdout.as_mut().ok_or(HostError::Crash...
   |           ----^^^^^^
   |           |
   |           help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: `dirtydata-host` (lib) generated 2 warnings (run `cargo fix --lib -p dirtydata-host` to apply 2 suggestions)
    Checking dirtydata-runtime v0.1.0 (/Users/yasuno/projects/DirtyData/crates/dirtydata-runtime)
warning: unused import: `HostError`
 --> crates/dirtydata-runtime/src/nodes.rs:2:34
  |
2 | use dirtydata_host::{PluginHost, HostError};
  |                                  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `dirtydata_core::ConfigSnapshot`
 --> crates/dirtydata-runtime/src/lib.rs:6:5
  |
6 | use dirtydata_core::ConfigSnapshot;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> crates/dirtydata-runtime/src/nodes.rs:972:13
    |
972 |         let mut u = vec![1.0; size];
    |             ----^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `config`
   --> crates/dirtydata-runtime/src/nodes.rs:981:70
    |
981 |     fn process(&mut self, _inputs: &[f32], outputs: &mut [[f32; 2]], config: &ConfigSnapshot, _ctx: &ProcessContext) {
    |                                                                      ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: field `stages` is never read
   --> crates/dirtydata-runtime/src/nodes.rs:852:5
    |
851 | pub struct WavefolderNode {
    |            -------------- field in this struct
852 |     stages: usize,
    |     ^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `tau_samples` is never read
   --> crates/dirtydata-runtime/src/nodes.rs:921:5
    |
919 | pub struct MackeyGlassNode {
    |            --------------- field in this struct
920 |     history: VecDeque<f32>,
921 |     tau_samples: usize,
    |     ^^^^^^^^^^^

warning: `dirtydata-runtime` (lib) generated 6 warnings (run `cargo fix --lib -p dirtydata-runtime` to apply 4 suggestions)
    Checking dirtydata-gui v0.1.0 (/Users/yasuno/projects/DirtyData/crates/dirtydata-gui)
warning: unused import: `UserPatchFile`
 --> crates/dirtydata-gui/src/lib.rs:6:37
  |
6 | use dirtydata_core::actions::{self, UserPatchFile};
  |                                     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `dirtydata_runtime::nodes::MidiEvent`
 --> crates/dirtydata-gui/src/lib.rs:7:5
  |
7 | use dirtydata_runtime::nodes::MidiEvent;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `NodeVisuals`
 --> crates/dirtydata-gui/src/app.rs:1:31
  |
1 | use crate::{InteractionState, NodeVisuals, UiLayout, CommandPalette};
  |                               ^^^^^^^^^^^

warning: unused imports: `ConfidenceScore`, `DataType`, `ExecutionDomain`, `PortDirection`, and `PortRef`
 --> crates/dirtydata-gui/src/app.rs:7:29
  |
7 | use dirtydata_core::types::{ConfidenceScore, DataType, ExecutionDomain, PortDirection, PortRef, StableId};
  |                             ^^^^^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^

warning: unused imports: `Painter` and `Vec2`
 --> crates/dirtydata-gui/src/app.rs:8:27
  |
8 | use egui::{vec2, Color32, Painter, Pos2, Rect, Stroke, Vec2};
  |                           ^^^^^^^                      ^^^^

warning: unused imports: `Rounding` and `Shadow`
 --> crates/dirtydata-gui/src/editor.rs:1:62
  |
1 | use egui::{vec2, Color32, Painter, Pos2, Rect, Stroke, Vec2, Rounding, Shadow};
  |                                                              ^^^^^^^^  ^^^^^^

warning: unused import: `ExecutionDomain`
 --> crates/dirtydata-gui/src/editor.rs:3:63
  |
3 | use dirtydata_core::types::{StableId, PortRef, PortDirection, ExecutionDomain};
  |                                                               ^^^^^^^^^^^^^^^

warning: unused import: `HashMap`
 --> crates/dirtydata-gui/src/editor.rs:7:24
  |
7 | use std::collections::{HashMap, HashSet};
  |                        ^^^^^^^

warning: use of deprecated method `egui::Response::drag_released`: Renamed 'drag_stopped'
   --> crates/dirtydata-gui/src/editor.rs:445:21
    |
445 |         if response.drag_released() {
    |                     ^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: unused variable: `graph`
   --> crates/dirtydata-gui/src/editor.rs:411:53
    |
411 |     fn handle_marquee(&mut self, ui: &mut egui::Ui, graph: &Graph, layout: &UiLayout, interaction: &mut InteractionState) {
    |                                                     ^^^^^ help: if this is intentional, prefix it with an underscore: `_graph`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `dirtydata-gui` (lib) generated 10 warnings (run `cargo fix --lib -p dirtydata-gui` to apply 9 suggestions)
    Checking dirtydata-cli v0.1.0 (/Users/yasuno/projects/DirtyData/crates/dirtydata-cli)
warning: unused import: `Path`
 --> crates/dirtydata-cli/src/exporter.rs:1:17
  |
1 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> crates/dirtydata-cli/src/main.rs:253:51
    |
216 | fn main() {
    | --------- this function should return `Result` or `Option` to accept `?`
...
253 |             install_dsp_crate(crate_name, version)?;
    |                                                   ^ cannot use the `?` operator in a function that returns `()`
    |
help: consider adding return type
    |
216 | fn main() -> Result<(), Box<dyn std::error::Error>> {
    |           +++++++++++++++++++++++++++++++++++++++++

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `crossbeam_channel`
   --> crates/dirtydata-cli/src/main.rs:864:31
    |
864 |     let (_midi_tx, midi_rx) = crossbeam_channel::unbounded::<dirtydata_runtime::nodes::MidiEvent>();
    |                               ^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `crossbeam_channel`
    |
    = help: if you wanted to use a crate named `crossbeam_channel`, use `cargo add crossbeam_channel` to add it to your `Cargo.toml`

error[E0599]: no method named `update_graph` found for struct `Arc<AudioEngine>` in the current scope
   --> crates/dirtydata-cli/src/main.rs:902:32
    |
902 |                         engine.update_graph(new_graph);
    |                                ^^^^^^^^^^^^ method not found in `Arc<AudioEngine>`

warning: unused variable: `node`
    --> crates/dirtydata-cli/src/main.rs:1436:17
     |
1436 |             let node = Node {
     |                 ^^^^ help: if this is intentional, prefix it with an underscore: `_node`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0433, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `dirtydata-cli` (bin "dirtydata-cli") generated 2 warnings
error: could not compile `dirtydata-cli` (bin "dirtydata-cli") due to 3 previous errors; 2 warnings emitted
